# rust-posix-ipc

./: Cargo.toml
src/: lib.rs
tests/: tests.rs
