[package]

name = "posix-ipc"
version = "0.0.2"
authors = ["Torrie Fischer <torrie@ripple.com>"]
description = "An API to POSIX IPC primitives"
repository = "http://github.com/codius/rust-posix-ipc"
license = "MIT"
readme = "README.md"

[dependencies]
num = "~0.1.24"
enum_primitive = "~0.1.0"
libc = "~0.1.7"
